--- a/src/main/java/config/img-size.properties
+++ b/src/main/java/config/img-size.properties
@@ -1,10 +1,12 @@
-#pages:
-pages.list.width=150
-pages.list.height=130
-pages.main.width=750
-pages.main.height=500
-#post:
-post.list.width=150
-post.list.height=130
-post.main.width=750
-post.main.height=500
+#thumb:
+thumb.width=150
+thumb.height=150
+#main
+main.width=400
+main.height=300
+#large:
+large.width=1024
+large.height=768
+#slide:
+slide.width=800
+slide.height=600
