--- a/src/main/java/config/img-size.properties
+++ b/src/main/java/config/img-size.properties
@@ -1,9 +1,9 @@
 #thumb:
-thumb.width=150
-thumb.height=150
+product.width=640
+product.height=419
 #main
-main.width=400
-main.height=300
+sketch.width=150
+sketch.height=150
 #large:
 large.width=1024
 large.height=768
