--- a/src/main/java/config/setup.properties
+++ b/src/main/java/config/setup.properties
@@ -1,5 +1,6 @@
-setup=dev
+setup=prod
 #prod/dev
 version=1.0
 static.dir=
-static.dir.prod=/opt/tomcat/webapps
+#static.dir.prod=/opt/tomcat/webapps
+static.dir.prod=/home/mngkovka/appservers/apache-tomcat-8x/webapps
