--- a/pom.xml
+++ b/pom.xml
@@ -491,24 +491,24 @@
 
         <!--DB Connection Pool-->
         <!-- Commons Database Connection Pooling -->
-        <!--<dependency>
+        <dependency>
             <groupId>commons-dbcp</groupId>
             <artifactId>commons-dbcp</artifactId>
             <version>1.4</version>
         </dependency>
 
 
-        &lt;!&ndash; Commons Object Pooling Library &ndash;&gt;
+        <!-- Commons Object Pooling Library -->
         <dependency>
             <groupId>commons-pool</groupId>
             <artifactId>commons-pool</artifactId>
             <version>1.5.4</version>
-        </dependency>-->
-        <dependency>
-            <groupId>com.zaxxer</groupId>
-            <artifactId>HikariCP</artifactId>
-            <version>2.5.1</version>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>com.zaxxer</groupId>-->
+            <!--<artifactId>HikariCP</artifactId>-->
+            <!--<version>2.5.1</version>-->
+        <!--</dependency>-->
         <!-- MySQL database driver -->
         <dependency>
             <groupId>mysql</groupId>
